<resources>
    <string name="app_name">ZoneioClient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="register_now">Register now</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="applogo">appLogo</string>
    <string name="register_prompt">Register</string>
</resources>
